Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-23466

SIGABRT in wsrep::server_state::provider on SELECT WSREP_LAST_SEEN_GTID() on optimized builds

    XMLWordPrintable

Details

    Description

      SELECT WSREP_LAST_SEEN_GTID();
      

      Leads to:

      10.4.15 eae968f62d285de97ed607c87bc131cd863d5d03 (Debug)

      2020-08-13 12:04:06 0 [Note] /test/MD110820-mariadb-10.4.15-linux-x86_64-dbg/bin/mysqld: ready for connections.
      Version: '10.4.15-MariaDB-debug'  socket: '/test/MD110820-mariadb-10.4.15-linux-x86_64-dbg/socket.sock'  port: 16143  MariaDB Server
      terminate called after throwing an instance of 'wsrep::runtime_error'
        what():  provider not loaded
      200813 12:04:28 [ERROR] mysqld got signal 6 ;
      

      10.4.15 eae968f62d285de97ed607c87bc131cd863d5d03 (Debug)

      Core was generated by `/test/MD110820-mariadb-10.4.15-linux-x86_64-dbg/bin/mysqld --no-defaults --core'.
      Program terminated with signal SIGABRT, Aborted.
      #0  __pthread_kill (threadid=<optimized out>, signo=signo@entry=6)
          at ../sysdeps/unix/sysv/linux/pthread_kill.c:57
      [Current thread is 1 (Thread 0x1478e4aa6700 (LWP 4090304))]
      (gdb) bt
      #0  __pthread_kill (threadid=<optimized out>, signo=signo@entry=6) at ../sysdeps/unix/sysv/linux/pthread_kill.c:57
      #1  0x00005655542df8a6 in my_write_core (sig=sig@entry=6) at /test/10.4_dbg/mysys/stacktrace.c:482
      #2  0x0000565553a5bcdc in handle_fatal_signal (sig=6) at /test/10.4_dbg/sql/signal_handler.cc:343
      #3  <signal handler called>
      #4  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:51
      #5  0x00001478e2d3d8b1 in __GI_abort () at abort.c:79
      #6  0x00001478e3518957 in ?? () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
      #7  0x00001478e351eae6 in ?? () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
      #8  0x00001478e351eb21 in std::terminate() () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
      #9  0x00001478e351ed54 in __cxa_throw () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
      #10 0x0000565553c68f49 in wsrep::server_state::provider (this=<optimized out>) at /test/10.4_dbg/wsrep-lib/include/wsrep/server_state.hpp:310
      #11 0x0000565553b224a3 in Item_func_wsrep_last_seen_gtid::val_str_ascii (this=0x1478bcc6d700, str=<optimized out>) at /test/10.4_dbg/sql/item_strfunc.cc:5384
      #12 0x0000565553b2a64e in Item_func::val_str_from_val_str_ascii (this=0x1478bcc6d700, str=0x1478e4aa27b0, ascii_buffer=0x1478bcc6d7c0) at /test/10.4_dbg/sql/item_strfunc.cc:103
      #13 0x0000565553adb1fc in Item_str_ascii_func::val_str (this=<optimized out>, str=<optimized out>) at /test/10.4_dbg/sql/item_strfunc.h:88
      #14 0x0000565553974e6c in Type_handler::Item_send_str (this=<optimized out>, item=0x1478bcc6d700, protocol=0x1478bcc15638, buf=<optimized out>) at /test/10.4_dbg/sql/sql_type.cc:6913
      #15 0x000056555397be1f in Type_handler_string_result::Item_send (this=<optimized out>, item=<optimized out>, protocol=<optimized out>, buf=<optimized out>) at /test/10.4_dbg/sql/sql_type.h:4755
      #16 0x00005655536be7f9 in Item::send (this=0x1478bcc6d700, protocol=0x1478bcc15638, buffer=0x1478e4aa2780) at /test/10.4_dbg/sql/item.h:1038
      #17 0x00005655536bc64d in Protocol::send_result_set_row (this=this@entry=0x1478bcc15638, row_items=row_items@entry=0x1478bcc6d3c8) at /test/10.4_dbg/sql/protocol.cc:1035
      #18 0x000056555374cbea in select_send::send_data (this=0x1478bcc6e0d0, items=@0x1478bcc6d3c8: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x1478bcc6d800, last = 0x1478bcc6d800, elements = 1}, <No data fields>}) at /test/10.4_dbg/sql/sql_class.cc:3010
      #19 0x00005655538252c8 in JOIN::exec_inner (this=this@entry=0x1478bcc6e0f8) at /test/10.4_dbg/sql/sql_select.cc:4341
      #20 0x000056555382604d in JOIN::exec (this=this@entry=0x1478bcc6e0f8) at /test/10.4_dbg/sql/sql_select.cc:4255
      #21 0x00005655538243f3 in mysql_select (thd=thd@entry=0x1478bcc15070, tables=<optimized out>, wild_num=0, fields=@0x1478bcc6d3c8: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x1478bcc6d800, last = 0x1478bcc6d800, elements = 1}, <No data fields>}, conds=0x0, og_num=<optimized out>, order=0x0, group=0x0, having=0x0, proc_param=0x0, select_options=2147748608, result=0x1478bcc6e0d0, unit=0x1478bcc18f98, select_lex=0x1478bcc6d280) at /test/10.4_dbg/sql/sql_select.cc:4687
      #22 0x000056555382471e in handle_select (thd=thd@entry=0x1478bcc15070, lex=lex@entry=0x1478bcc18ed8, result=result@entry=0x1478bcc6e0d0, setup_tables_done_option=setup_tables_done_option@entry=0) at /test/10.4_dbg/sql/sql_select.cc:410
      #23 0x000056555379d3c6 in execute_sqlcom_select (thd=thd@entry=0x1478bcc15070, all_tables=0x0) at /test/10.4_dbg/sql/sql_parse.cc:6355
      #24 0x00005655537a879a in mysql_execute_command (thd=thd@entry=0x1478bcc15070) at /test/10.4_dbg/sql/sql_parse.cc:3889
      #25 0x00005655537b3090 in mysql_parse (thd=thd@entry=0x1478bcc15070, rawbuf=<optimized out>, length=<optimized out>, parser_state=parser_state@entry=0x1478e4aa5460, is_com_multi=is_com_multi@entry=false, is_next_command=is_next_command@entry=false) at /test/10.4_dbg/sql/sql_parse.cc:7896
      #26 0x00005655537b5920 in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x1478bcc15070, packet=packet@entry=0x1478bcc57071 "", packet_length=packet_length@entry=29, is_com_multi=is_com_multi@entry=false, is_next_command=is_next_command@entry=false) at /test/10.4_dbg/sql/sql_parse.cc:1834
      #27 0x00005655537b935b in do_command (thd=0x1478bcc15070) at /test/10.4_dbg/sql/sql_parse.cc:1352
      #28 0x00005655538e58b6 in do_handle_one_connection (connect=connect@entry=0x1478e1835790) at /test/10.4_dbg/sql/sql_connect.cc:1412
      #29 0x00005655538e59d6 in handle_one_connection (arg=0x1478e1835790) at /test/10.4_dbg/sql/sql_connect.cc:1316
      #30 0x00001478e3ca46db in start_thread (arg=0x1478e4aa6700) at pthread_create.c:463
      #31 0x00001478e2e1ea3f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      Bug confirmed present in:
      MariaDB: 10.4.15 (dbg), 10.4.15 (opt)

      Bug confirmed not present in:
      MariaDB: 10.1.47 (dbg), 10.1.47 (opt), 10.2.34 (dbg), 10.2.34 (opt), 10.3.25 (dbg), 10.3.25 (opt), 10.5.6 (dbg), 10.5.6 (opt)
      MySQL: 5.5.62 (dbg), 5.5.62 (opt), 5.6.47 (dbg), 5.6.47 (opt), 5.7.29 (dbg), 5.7.29 (opt), 8.0.19 (dbg), 8.0.19 (opt)

      Attachments

        Issue Links

          Activity

            People

              jplindst Jan Lindström (Inactive)
              Roel Roel Van de Paar
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 40m
                  40m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.