MDEV-23466 SIGABRT on SELECT WSREP_LAST_SEEN_GTID

SELECT WSREP_LAST_SEEN_GTID aborts the server if no provider is
loaded.